--- a/download.html
+++ b/download.html
@@ -112,6 +112,15 @@
             <img src="./img/screenshots3.jpg" alt="">
         </div>
     </div>
+    <!-- download -->
+    <div class="download">
+        <h2>Download Links</h2>
+        <div class="download-links">
+            <a href="#">For Android</a>
+            <a href="#">For IOS</a>
+            <a href="#">For Windows</a>
+        </div>
+    </div>
     <!-- copyright -->
     <div class="copyright container">
         <a href="#" class="logo">Game<span>Store</span></a>
