--- a/fornite.html
+++ b/fornite.html
@@ -123,6 +123,15 @@
             <img src="./img/fortnite3.jpg" alt="">
         </div>
     </div>
+      <!-- download -->
+      <div class="download">
+        <h2>Download Links</h2>
+        <div class="download-links">
+            <a href="#">For Android</a>
+            <a href="#">For IOS</a>
+            <a href="#">For Windows</a>
+        </div>
+    </div>
     <!-- copyright -->
     <div class="copyright container">
         <a href="#" class="logo">Game<span>Store</span></a>
