--- a/download.html
+++ b/download.html
@@ -94,7 +94,7 @@
     </header>
     <!-- video -->
     <div class="video-container container">
-        <video src="./download-files/Subway Surfers World Tour 2022 - World Tour Greece.mp4"autoplay></video>
+        <video src="./download-files/Subway Surfers World Tour 2022 - World Tour Greece.mp4 muted"autoplay></video>
     </div>
     <!-- about-game -->
     <div class="about container">
@@ -116,9 +116,9 @@
     <div class="download">
         <h2>Download Links</h2>
         <div class="download-links">
-            <a href="#">For Android</a>
-            <a href="#">For IOS</a>
-            <a href="#">For Windows</a>
+            <a href="https://play.google.com/store/apps/details?id=com.kiloo.subwaysurf&hl=ru&gl=US">For Android</a>
+            <a href="https://apps.apple.com/us/app/subway-surfers/id512939461">For IOS</a>
+            <a href="https://www.bluestacks.com/apps/arcade/subway-surfers-on-pc.html">For Windows</a>
         </div>
     </div>
     <!-- copyright -->
