--- a/fornite.html
+++ b/fornite.html
@@ -94,7 +94,7 @@
     </header>
     <!-- video -->
     <div class="video-container container">
-        <video src="./download-files/Fortnitemares 2022 Gameplay Trailer.mp4"autoplay></video>
+        <video src="./download-files/Fortnitemares 2022 Gameplay Trailer.mp4"autoplay muted></video>
     </div>
     <!-- about-game -->
     <div class="about container">
@@ -127,9 +127,9 @@
       <div class="download">
         <h2>Download Links</h2>
         <div class="download-links">
-            <a href="#">For Android</a>
-            <a href="#">For IOS</a>
-            <a href="#">For Windows</a>
+            <a href="https://likeit.guru/action/fortnite-battle-royale">For Torrent</a>
+            <a href="https://store.epicgames.com/en-US/p/fortnite">For MAC</a>
+            <a href="https://store.epicgames.com/en-US/p/fortnite">For Windows</a>
         </div>
     </div>
     <!-- copyright -->
