--- a/free.html
+++ b/free.html
@@ -94,7 +94,7 @@
     </header>
     <!-- video -->
     <div class="video-container container">
-        <video src="./download-files/Free guy - all youtuber_streamer scenes.mp4"autoplay></video>
+        <video src="./download-files/Free guy - all youtuber_streamer scenes.mp4"autoplay muted></video>
     </div>
     <!-- about-game -->
     <div class="about container">
@@ -117,9 +117,9 @@
       <div class="download">
         <h2>Download Links</h2>
         <div class="download-links">
-            <a href="#">For Android</a>
-            <a href="#">For IOS</a>
-            <a href="#">For Windows</a>
+            <a href="https://taazaga.com/free-guy-2021-dvdrip-720p-full-torrent/#torrentp">For Torrent</a>
+            <a href="https://itunes.apple.com/us/movie/free-guy/id1584216017">For MAC</a>
+            <a href="https://www.microsoft.com/en-us/p/free-guy/8d6kgwxn4l7c?activetab=pivot%3aoverviewtab">For Windows</a>
         </div>
     </div>
     <!-- copyright -->
