--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 </head>
 <body>
+    <!-- scroll-bar -->
+    <div class="progress">
+        <div class="progress-bar" id="scroll-bar"></div>
+    </div>
     <!-- header -->
     <header>
         <!-- nav -->
@@ -594,7 +598,7 @@
         </div>
         <!-- next-page -->
         <div class="next-page">
-            <a href="#">Next Page</a>
+            <a href="next.html">Next Page</a>
         </div>
     </section>
     <!-- new-section-end -->
