--- a/marvel.html
+++ b/marvel.html
@@ -94,7 +94,7 @@
     </header>
     <!-- video -->
     <div class="video-container container">
-        <video src="./download-files/Marvel Realm of Champions _ Cinematic.mp4"autoplay></video>
+        <video src="./download-files/Marvel Realm of Champions _ Cinematic.mp4"autoplay muted></video>
     </div>
     <!-- about-game -->
     <div class="about container">
@@ -120,9 +120,9 @@
       <div class="download">
         <h2>Download Links</h2>
         <div class="download-links">
-            <a href="#">For Android</a>
-            <a href="#">For IOS</a>
-            <a href="#">For Windows</a>
+            <a href="https://gameshunters.com/marvel-contest-champions-pc-download/">For Torrent</a>
+            <a href="https://www.bluestacks.com/apps/action/marvel-contest-of-champions-on-pc.html">For MAC</a>
+            <a href="https://www.memuplay.com/how-to-play-Marvel-Contest-of-Champions-on-pc.html">For Windows</a>
         </div>
     </div>
     <!-- copyright -->
