--- a/pubg.html
+++ b/pubg.html
@@ -94,7 +94,7 @@
     </header>
     <!-- video -->
     <div class="video-container container">
-        <video src="./download-files/PUBG MOBILE Global Launch Trailer.mp4"autoplay></video>
+        <video src="./download-files/PUBG MOBILE Global Launch Trailer.mp4"autoplay muted></video>
     </div>
     <!-- about-game -->
     <div class="about container">
@@ -117,9 +117,9 @@
       <div class="download">
         <h2>Download Links</h2>
         <div class="download-links">
-            <a href="#">For Android</a>
-            <a href="#">For IOS</a>
-            <a href="#">For Windows</a>
+            <a href="https://play.google.com/store/apps/details?id=com.tencent.ig&hl=ru&gl=US">For Android</a>
+            <a href="https://apps.apple.com/us/app/pubg-mobile/id1330123889">For IOS</a>
+            <a href="https://www.gameloop.com/game/action/pubg-mobile-on-pc">For Windows</a>
         </div>
     </div>
     <!-- copyright -->
