--- a/call.html
+++ b/call.html
@@ -94,7 +94,7 @@
     </header>
     <!-- video -->
     <div class="video-container container">
-        <video src="./download-files/callof.mp4"autoplay></video>
+        <video src="./download-files/callof.mp4"autoplay muted></video>
     </div>
     <!-- about-game -->
     <div class="about container">
@@ -116,9 +116,9 @@
     <div class="download">
         <h2>Download Links</h2>
         <div class="download-links">
-            <a href="#">For Android</a>
-            <a href="#">For IOS</a>
-            <a href="#">For Windows</a>
+            <a href="https://play.google.com/store/apps/details?id=com.activision.callofduty.shooter&hl=ru&gl=US">For Android</a>
+            <a href="https://apps.apple.com/us/app/call-of-duty-mobile/id1287282214">For IOS</a>
+            <a href="https://call-of-duty-mobile-for-pc.en.softonic.com/">For Windows</a>
         </div>
     </div>
     <!-- copyright -->
