--- a/error.html
+++ b/error.html
@@ -12,6 +12,10 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <!-- scroll-bar -->
+    <div class="progress">
+        <div class="progress-bar" id="scroll-bar"></div>
+    </div>
     <div class="error">
         <h1>404</h1>
         <p>Not Found!!!error</p>
