--- a/next.html
+++ b/next.html
@@ -13,6 +13,10 @@
 
 </head>
 <body>
+    <!-- scroll-bar -->
+    <div class="progress">
+        <div class="progress-bar" id="scroll-bar"></div>
+    </div>
     <!-- header -->
     <header>
         <!-- nav -->
