--- a/download.html
+++ b/download.html
@@ -13,6 +13,10 @@
 
 </head>
 <body>
+    <!-- scroll-bar -->
+    <div class="progress">
+        <div class="progress-bar" id="scroll-bar"></div>
+    </div>
     <!-- header -->
     <header>
         <!-- nav -->
@@ -85,16 +89,12 @@
                     <i class='bx bx-check-circle'></i>
                     <a href="https://store.epicgames.com/en-US/p/darkwood-fa73bd">Download Darkwood</a>
                 </div>
-                <div class="notification-box2">
-                    <i class='bx bx-check-circle'></i>
-                    <a href="https://store.epicgames.com/en-US/p/red-dead-redemption-2">Download Red Dead Redemption 2</a>
-                </div>
             </div>
         </div>
     </header>
     <!-- video -->
     <div class="video-container container">
-        <video src="./download-files/Subway Surfers World Tour 2022 - World Tour Greece.mp4 muted"autoplay></video>
+        <video src="./download-files/Subway Surfers World Tour 2022 - World Tour Greece.mp4"autoplay controls></video>
     </div>
     <!-- about-game -->
     <div class="about container">
