--- a/next.html
+++ b/next.html
@@ -251,7 +251,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending1.webp" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
@@ -269,7 +269,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending2.jpg" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
@@ -287,7 +287,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending3.jpg" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
@@ -305,7 +305,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending4.jpg" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
@@ -323,7 +323,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending5.png" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
@@ -341,7 +341,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending6.jpg" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
@@ -359,7 +359,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending7.png" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
@@ -377,7 +377,7 @@
             </div>
             <!-- box-8 -->
             <div class="box">
-                <img src="./img/new8.jpg" alt="">
+                <img src="./img/trending8.png" alt="">
                 <div class="box-text">
                     <h2>Marvel of Champions</h2>
                     <h3>Action</h3>
