--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <!-- nav-icons -->
             <div class="nav-icons">
                 <i class='bx bx-bell bx-tada' id="bell-icon"><span></span></i>
-                <i class='bx bxs-download' id="download-icon"></i>
+                <i class='bx bxs-download bx-tada' id="download-icon"></i>
                 <div class="menu-icon">
                     <div class="line1"></div>
                     <div class="line2"></div>
